--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,26 +28,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter_downloader: ^1.8.6
-  pdf: ^3.11.3
-  path_provider: ^2.1.5
-  open_filex: ^4.7.0
-  google_fonts: ^6.2.1
-  go_router: ^14.8.1
-  flutter:
-    sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  
+  community_charts_flutter: ^1.0.4
   cupertino_icons: ^1.0.8
   file_picker: ^9.2.0
-  http: ^1.3.0
   
+  flutter:
+    sdk: flutter
+  flutter_downloader: ^1.8.6
+  go_router: ^14.8.1
+  google_fonts: ^6.2.1
+  html_to_pdf: ^0.8.1
+  http: ^1.3.0
+  open_filex: ^4.7.0
+  path_provider: ^2.1.5
+  pdf: ^3.11.3
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -55,10 +52,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -66,18 +64,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
