--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  
-  community_charts_flutter: ^1.0.4
+  flutter_svg: ^2.0.17
+  excel: ^4.0.6
+  pie_chart: ^5.4.0
   cupertino_icons: ^1.0.8
   file_picker: ^9.2.0
   
@@ -65,8 +66,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/examuiz-logo.svg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
